@@ -6,7 +6,7 @@
     <parent>
         <groupId>run.mone</groupId>
         <artifactId>jcommon</artifactId>
-        <version>1.4-jdk20-SNAPSHOT</version>
+        <version>1.4-jdk21-SNAPSHOT</version>
     </parent>
 
     <artifactId>docean-spring-starter</artifactId>
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>run.mone</groupId>
             <artifactId>docean</artifactId>
-            <version>1.4-java20-SNAPSHOT</version>
+            <version>1.4-jdk21-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -47,12 +47,12 @@
                 <version>3.11.0</version>
                 <configuration>
                     <compilerArgs>
-                        <arg>--add-modules=jdk.incubator.concurrent</arg>
+<!--                        <arg>&#45;&#45;add-modules=jdk.incubator.concurrent</arg>-->
                         <arg>--enable-preview</arg>
                     </compilerArgs>
-                    <compilerVersion>20</compilerVersion>
-                    <source>20</source>
-                    <target>20</target>
+                    <compilerVersion>21</compilerVersion>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
 
